<resources>
	<string name="adp_pull_to_refresh">下拉刷新</string>
	<string name="adp_refreshing">刷新中...</string>
	<string name="adp_pull_up_to_get_more">上拉或点击获取更多</string>
	<string name="adp_pull_view_date_tip">最后更新：</string>
	<string name="adp_release_to_get_more">可以松手了</string>
    <string name="adp_refreshed">上次更新时间</string>
    <string name="adp_release_to_refresh">释放刷新</string>
    <string name="adp_loading">正在加载</string>
    <string name="app_name">meet</string>
    <string name="action_settings">Settings</string>
    <string name="meet_you">欢迎来到Meet!</string>
    <string name="take_a_photo">来个照片吧~</string>
    <string name="register">注册</string>
    <string name="user_name">用户名</string>
    <string name="sex">性别：</string>
    <string name="quxiang">寻找对象：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="other">其它</string>
    <string name="input_user_name">请输入用户名...</string>
    <string name="signed_label">已签</string>
    <string name="group_no_data_tip">你还没有加入群组\n去你关注的吧里看看，发现更多有趣群组</string>
    <string name="forum_not_like_tip">你还没有关注任何吧</string>
    <string name="forum_block_tip">去吧广场看看吧~发现更多好玩有趣的吧！</string>
    <string name="home">进吧</string>
    <string name="mention">提到我的</string>
    <string name="recommend">精彩推荐</string>
    <string name="homepage">首页</string>
    <string name="info">资料</string>
    <string name="more">更多</string>
    <string name="chatroom">聊天室</string>
    <string name="neterror">你的网络状况不大好，请稍后重试</string>
    <string name="memoryerror">你的内存不足，请稍后重试</string>
    <string name="FileWriteError">文件保存失败</string>
    <string name="Waiting">请稍后…</string>
    <string name="back">返回</string>
    <string name="refresh">刷新</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="click_screen_to_refresh">点击屏幕刷新</string>
    <string name="retry_location">点击刷新按钮重试</string>
    <string name="write_msg">发贴</string>
    <string name="reply">回复</string>
    <string name="operation">操作</string>
    <string name="view">查看</string>
    <string name="tip">顶</string>
    <string name="view_host">只看楼主</string>
    <string name="cancel_view_host">取消只看楼主</string>
    <string name="view_reverse">倒序查看</string>
    <string name="mark">收藏</string>
    <string name="my_mark">我的收藏</string>
    <string name="view_info">查看个人资料</string>
    <string name="person_info_text">个人资料</string>
    <string name="grade">级</string>
    <string name="format_grade">%d级</string>
    <string name="floor">楼</string>
    <string name="format_floor">%d楼</string>
    <string name="address_error">地址错误</string>
    <string name="pre_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="view_all">查看全部</string>
    <string name="view_sequence">查看原贴</string>
    <string name="save">保存</string>
    <string name="save_to">保存至：</string>
    <string name="save_error">保存失败</string>
    <string name="like_bars">关注的吧</string>
    <string name="like">关注该吧</string>
    <string name="unlike">取消关注</string>
    <string name="search_bar">搜索贴吧</string>
    <string name="search_group_id">搜索贴吧</string>
    <string name="search_post_hint">搜索贴子</string>
    <string name="search_bar_post">进吧、搜贴</string>
    <string name="search_bar_post_1">搜吧、搜贴</string>
    <string name="search_group_text">输入群号</string>
    <string name="search_group_by_id">输入群号</string>
    <string name="search_groups">搜群</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="clean_search">清除搜索记录</string>
    <string name="view_good">查看精品区</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="error">错误</string>
    <string name="confirm">确定</string>
    <string name="enter">进入</string>
    <string name="delete_mark">删除收藏</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="frs_good">全部精品</string>
    <string name="square">广场</string>
    <string name="enter_forum">进吧</string>
    <string name="enter_group">进群</string>
    <string name="like_forum_menu">关注</string>
    <string name="interest_all">全部兴趣</string>
    <string name="interest_add">添加兴趣</string>
    <string name="setup">设置</string>
    <string name="account">帐号</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="quit">退出</string>
    <string name="alerm_title">提醒</string>
    <string name="alert_clear_all_cache">根据缓存文件的大小，清理时间从几秒到几分钟不等，请耐心等待。</string>
    <string name="alert_clear_cache">确定清空当前账号的本地群聊记录？</string>
    <string name="alert_clear_one_account_cache">删除账号将会同时清空本地群聊记录。确认清除吗？</string>
    <string name="alert_quit_confirm">确认退出百度贴吧？</string>
    <string name="alert_clean_history">确认清除搜索记录？</string>
    <string name="alert_yes_button">确认</string>
    <string name="alert_no_button">取消</string>
    <string name="browse_setting">浏览设置</string>
    <string name="browse_setting_spannable">正文浏览设置（图片、头像、字号）</string>
    <string name="image_quality">正文图片质量</string>
    <string name="text_cancel">取消</string>
    <string name="text_no_search_record">暂无搜索记录</string>
    <string name="text_no_search_record_ground">无搜索结果</string>
    <string name="text_no_suggest">没有结果</string>
    <string name="account_account">帐号</string>
    <string name="account_mobile">手机号</string>
    <string name="account_account_limit">不超过7个汉字，或14个字节(数字，字母和下划线)</string>
    <string name="account_password">密码</string>
    <string name="title_vcode">验证码</string>
    <string name="vcode_refresh">换一换</string>
    <string name="account_hint_normal">用户名/邮箱</string>
    <string name="account_login_loading">登录…</string>
    <string name="account_password_limit">6～14个字符(字母区分大小写)</string>
    <string name="account_apassword">确认密码</string>
    <string name="account_male">男</string>
    <string name="account_female">女</string>
    <string name="account_protocol">协议条款</string>
    <string name="account_login">登录</string>
    <string name="normal_login">普通登录</string>
    <string name="mobile_login">手机登录</string>
    <string name="account_regedit">注册</string>
    <string name="account_goregedit">没有百度帐号？立即注册</string>
    <string name="account_err_protocol">你还没有阅读用户协议。</string>
    <string name="account_err_apasswd">两次输入的密码不一致，请重新输入。</string>
    <string name="account_err_passwd">你的密码不符合要求，请重新输入。</string>
    <string name="account_err_account">你的用户名不符合要求，请重新输入。</string>
    <string name="account_logining">正在登录中…</string>
    <string name="account_suggest">可以从这几个用户名中选择你的用户名</string>
    <string name="title_login">登录百度帐号</string>
    <string name="mention_chatme">消息</string>
    <string name="mention_replyme">回复</string>
    <string name="mention_atme">\@我</string>
    <string name="metion_chatmessage">聊天通知</string>
    <string name="metion_groupmessage">群消息通知</string>
    <string name="mention_replyme_thread">回复我的主题：</string>
    <string name="mention_replyme_post">回复我的贴子：</string>
    <string name="mention_replyme_nodata">你还没有新回复</string>
    <string name="mention_atme_nodata">还没有人@你</string>
    <string name="view_post">查看该回复</string>
    <string name="view_pb">查看该主题</string>
    <string name="all">全部</string>
    <string name="thread">主题</string>
    <string name="no_post_info">你还没有发布任何内容，快去吧里冒个泡吧</string>
    <string name="she_no_post_info">她还没有发布任何内容</string>
    <string name="he_no_post_info">他还没有发布任何内容</string>
    <string name="ta_no_post_info">TA还没有发布任何内容</string>
    <string name="add_thread">发表：</string>
    <string name="add_reply">回复：</string>
    <string name="reply_prefix">(</string>
    <string name="reply_suffix">回复)</string>
    <string name="month">月</string>
    <string name="retry">重试</string>
    <string name="forum">吧</string>
    <string name="post_new_thread">发表主题</string>
    <string name="send">发贴</string>
    <string name="send_post">发表</string>
    <string name="load_more">加载更多</string>
    <string name="pb_load_more">加载更多...</string>
    <string name="click_load_more">点击加载更多</string>
    <string name="no_more_to_load">已无更多贴子</string>
    <string name="no_more_mark">已无更多收藏</string>
    <string name="loading">正在加载…</string>
    <string name="syncing">正在同步</string>
    <string name="have">已</string>
    <string name="data_too_big">数据过大</string>
    <string name="pic_parser_error">图片解析错误</string>
    <string name="no_data">没有数据！</string>
    <string name="frs_next">点击加载下一页</string>
    <string name="frs_pre">点击加载上一页</string>
    <string name="write_title_hint">标题(必填)</string>
    <string name="write_content_hint">请输入内容…</string>
    <string name="write_keyword">请输入关键字</string>
    <string name="send_reply">发表回复</string>
    <string name="error_no_sdcard">无法找到存储卡</string>
    <string name="error_sd_shared">你的存储卡被USB占用，请更改数据线连接方式</string>
    <string name="sending">正在发送中…</string>
    <string name="send_success">发送成功！</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="from_album">从相册选择</string>
    <string name="error_sd_error">存储卡读写失败</string>
    <string name="delete">删除</string>
    <string name="like_nodata">还没有关注的吧？815万个兴趣吧等你来搜！</string>
    <string name="mark_nodata">你还没有收藏，浏览贴子时长按即可添加。</string>
    <string name="frs_noforum">该吧还未建立，去看看其他贴吧。</string>
    <string name="pb_nodata">你浏览的主题已不存在，去看看其他贴子吧！</string>
    <string name="frs_nodata">本吧暂时没有贴子</string>
    <string name="nearby_pb_nodata">本微贴还没有评论，快来抢沙发~</string>
    <string name="post_x_floor">第%d楼</string>
    <string name="reply_x_floor">回复%d楼:</string>
    <string name="reply_sub_floor">回复 %s :</string>
    <string name="reply_sub_floor_confirm">是否回复{0}并清空已输入的内容？</string>
    <string name="error_unkown">未知错误</string>
    <string name="error_unkown_try_again">获取数据失败，请重试</string>
    <string name="select_friend">选择好友</string>
    <string name="search_friend">搜索好友</string>
    <string name="input_under_characters">请输入下图中的字母</string>
    <string name="is_save_draft">是否保存草稿？</string>
    <string name="not_save">不保存</string>
    <string name="error_sd_unmount">无法找到存储卡</string>
    <string name="error_sd_full">存储卡已满，请清理后再尝试</string>
    <string name="vcode_change_image">点击验证码图片换一张</string>
    <string name="video">视频:</string>
    <string name="change">修改</string>
    <string name="person_info">个人中心</string>
    <string name="bar">吧</string>
    <string name="remind">消息</string>
    <string name="bar_search">吧搜索</string>
    <string name="content">内容</string>
    <string name="no_freind">你没有关注任何人</string>
    <string name="update_client">百度贴吧%s发布了！赶快更新版本吧</string>
    <string name="update">更新</string>
    <string name="notify">检测到新版本</string>
    <string name="tieba_downloading">百度贴吧%s正在下载…</string>
    <string name="account_manager">帐号管理</string>
    <string name="edit">编辑</string>
    <string name="attention">关注</string>
    <string name="fans">关注我的人</string>
    <string name="my_bar">我关注的吧</string>
    <string name="its_bar">Ta关注的吧</string>
    <string name="degree">等级</string>
    <string name="delete_like_info">删除后将不在进吧页面中显示本吧</string>
    <string name="self_intro">个人简介：</string>
    <string name="msg_remind">消息提醒</string>
    <string name="sign_remind">每日签到提醒</string>
    <string name="sign_remind_time">%1$s:%2$s</string>
    <string name="sign_remind_outline">签到提醒</string>
    <string name="sign_remind_time_text">提醒时间</string>
    <string name="no_disturb_mode">免打扰</string>
    <string name="no_disturb_start_time">开始时间</string>
    <string name="no_disturb_end_time">结束时间</string>
    <string name="no_disturb_mode_time">免打扰时间设置</string>
    <string name="message_remind">消息通知</string>
    <string name="sign_notification_content">亲，开始今天的签到吧～～</string>
    <string name="browsing_settings">浏览设置</string>
    <string name="rotate_left">向左旋转</string>
    <string name="rotate_right">向右旋转</string>
    <string name="rotate_left_right">左右翻转</string>
    <string name="rotate_up_down">上下翻转</string>
    <string name="rotate">旋转</string>
    <string name="beautify">美化</string>
</resources>